# aquazik

./: .~lock.Planning - Week 1.docx#  Planning - Week 1.docx  README.md  Resources.md  WeekByWeek.docx  main.py  pyproject.toml
Animation/: aquarium.py
code/: Generating_midi_file.py  MidiV2.py  Mp3_to_midi.py  freq_analysis.py  midi_reader.py
